# chronos

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  AGENT_INTEGRATION.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  SETUP.md  docker-compose.yml  heroku.yml  mypy.ini  pyproject.toml  spec.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy.yml  eval.yml  lint.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/units/: U-09_production_hardening.md  U-10_temporal_innovation.md  U-11_aggregated_dashboard.md  U-12_falkor_persistence.md
chronos/: graphiti_client.py  main.py
chronos-frontend/: .dockerignore  .env.example  .vercelignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
chronos-frontend/src/: App.tsx  index.css  types.ts  vite-env.d.ts
chronos/agent/: graph.py  state.py
chronos/analytics/: __init__.py  stats.py  trends.py
chronos/api/: dependencies.py  middleware.py  rate_limit.py  schemas.py
chronos/code_intel/: __init__.py  code_search.py  dbt_manifest.py  graphify_adapter.py  local_git.py  sql_parser.py
chronos/compliance/: prov_generator.py
chronos/config/: litellm_config.yaml  settings.py
chronos/core/: __init__.py  incident_store.py  investigation_runner.py
chronos/demo/: __main__.py  scenarios.py  seeder.py
chronos/enrichment/: graphify_context.py
chronos/health/: __init__.py  aggregator.py  (+2 more)
config/: slack_users.yaml
graphify-out/: GRAPH_REPORT.md  cost.json  graph.json  manifest.json
scripts/: demo_inject_failure.py  inject_failure.sh  real_seed.py  seed_openmetadata.sh  setup_production.sh  verify_connections.py
tests/: test_api_routes.py  test_code_intel.py  test_error_handling.py  test_graphify_context.py  test_health_probes.py  test_imports.py  test_incident_store.py  test_incident_strictness.py  test_nodes.py  test_nodes_code_intel.py  test_prov.py  test_remaining_nodes.py  test_security_hardening.py  test_settings.py  test_slack_notifications.py  test_sse_queue_eviction.py  test_webhook_auth.py
(+89 files in other folders)
